Correção no Swagger e melhoria na função de search e criação da função searchById
